--- a/html/index.html
+++ b/html/index.html
@@ -208,72 +208,148 @@
 
   <!-- ------ACTUALITES---------- -->
 
-  <section class="">
-    <div class="container mx-auto px-4 mb-10 md:px-12 xl:px-10 bg-white">
-      <div class="space-y-2 text-center">
-        <h2 class="text-3xl font-bold">Partem reprimique an pro</h2>
-        <p class="font-serif text-sm dark:text-gray-400">Qualisque erroribus usu at, duo te agam soluta mucius.</p>
-      </div>
-      <div class="grid grid-cols-1 gap-x-4 gap-y-8 md:grid-cols-2 lg:grid-cols-4">
-        <article class="flex flex-col dark:bg-gray-900">
-          <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum">
-            <img alt="" class="object-cover w-full h-52 dark:bg-gray-500" src="https://source.unsplash.com/200x200/?fashion?1">
-          </a>
-          <div class="flex flex-col flex-1 p-6">
-            <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum"></a>
-            <a rel="noopener noreferrer" href="#" class="text-xs tracki uppercase hover:underline dark:text-violet-400">Convenire</a>
-            <h3 class="flex-1 py-2 text-lg font-semibold leadi">Te nulla oportere reprimique his dolorum</h3>
-            <div class="flex flex-wrap justify-between pt-3 space-x-2 text-xs dark:text-gray-400">
-              <span>June 1, 2020</span>
-              <span>2.1K views</span>
+  <div class="container mx-auto px-4 mb-10 md:px-12 xl:px-8">
+    <div class="p-2 rounded">
+
+      <div class="md:flex-row gap-10">
+
+        <div class="   px-4  pt-8  shadow-lg">
+
+          <div class="grid lg:grid-cols-4 gap-6">
+
+
+            <div class=" shadow-lg ">
+              <a href="news/actualite.html">
+                <div class="  bg-cover bg-center text-center overflow-hidden"
+                  style="background-image: url('images/communique/1.jpg')" title="   ">
+                </div>
+                <img src="images/slide/banner-01.jpg" class="w-full bg-coer bg-center overflow-hidden" alt="">
+              </a>
+              <div
+                class="mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
+                <div class="px-4">
+                  <a href="news/actualite.html"
+                    class="text-xs font-bold text-indigo-600 uppercase   flex items-center hover:text-gray-900 transition duration-500 ease-in-out">
+                    UNIVERSITE
+                  </a>
+                  <a href="news/actualite.html"
+                    class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 transition duration-500 ease-in-out">The
+                    perfect summer sweater that you can wear!
+
+
+                    <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
+                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloribus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus, repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
+
+                    </p>
+                  </a>
+
+                </div>
+              </div>
             </div>
-          </div>
-        </article>
-        <article class="flex flex-col dark:bg-gray-900">
-          <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum">
-            <img alt="" class="object-cover w-full h-52 dark:bg-gray-500" src="https://source.unsplash.com/200x200/?fashion?2">
-          </a>
-          <div class="flex flex-col flex-1 p-6">
-            <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum"></a>
-            <a rel="noopener noreferrer" href="#" class="text-xs tracki uppercase hover:underline dark:text-violet-400">Convenire</a>
-            <h3 class="flex-1 py-2 text-lg font-semibold leadi">Te nulla oportere reprimique his dolorum</h3>
-            <div class="flex flex-wrap justify-between pt-3 space-x-2 text-xs dark:text-gray-400">
-              <span>June 2, 2020</span>
-              <span>2.2K views</span>
+
+            <div class=" shadow-lg ">
+              <a href="#">
+                <div class="  bg-cover bg-center text-center overflow-hidden"
+                  style="background-image: url('images/communique/1.jpg')" title="   ">
+                </div>
+                <img src="images/news/AA.jpg" class="w-full bg-coer bg-center overflow-hidden" alt="">
+              </a>
+              <div
+                class="mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
+                <div class="px-4">
+                  <a href="news/actualite.html"
+                    class="text-xs font-bold text-indigo-600 uppercase   flex items-center hover:text-gray-900 transition duration-500 ease-in-out">
+                    UNIVERSITE
+                  </a>
+                  <a href="news/actualite.html"
+                    class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 transition duration-500 ease-in-out">The
+                    perfect summer sweater that you can wear!
+
+
+                    <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
+                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloribus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus, repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
+
+                    </p>
+                  </a>
+
+                </div>
+              </div>
             </div>
-          </div>
-        </article>
-        <article class="flex flex-col dark:bg-gray-900">
-          <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum">
-            <img alt="" class="object-cover w-full h-52 dark:bg-gray-500" src="https://source.unsplash.com/200x200/?fashion?3">
-          </a>
-          <div class="flex flex-col flex-1 p-6">
-            <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum"></a>
-            <a rel="noopener noreferrer" href="#" class="text-xs tracki uppercase hover:underline dark:text-violet-400">Convenire</a>
-            <h3 class="flex-1 py-2 text-lg font-semibold leadi">Te nulla oportere reprimique his dolorum</h3>
-            <div class="flex flex-wrap justify-between pt-3 space-x-2 text-xs dark:text-gray-400">
-              <span>June 3, 2020</span>
-              <span>2.3K views</span>
+
+            <div class="  shadow-lg">
+              <a href="#">
+                <div class="  bg-cover bg-center text-center overflow-hidden"
+                  style="background-image: url('images/communique/1.jpg')" title="   ">
+                </div>
+                <img src="images/news/AA.jpg" class="w-full bg-coer bg-center overflow-hidden" alt="">
+              </a>
+              <div
+                class="mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
+                <div class="px-4">
+                  <a href="news/actualite.html"
+                    class="text-xs font-bold text-indigo-600 uppercase   flex items-center hover:text-gray-900 transition duration-500 ease-in-out">
+                    UNIVERSITE
+                  </a>
+                  <a href="news/actualite.html"
+                    class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 transition duration-500 ease-in-out">The
+                    perfect summer sweater that you can wear!
+
+
+                    <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
+                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloribus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus, repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
+
+                    </p>
+                  </a>
+
+                </div>
+              </div>
             </div>
-          </div>
-        </article>
-        <article class="flex flex-col dark:bg-gray-900">
-          <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum">
-            <img alt="" class="object-cover w-full h-52 dark:bg-gray-500" src="https://source.unsplash.com/200x200/?fashion?4">
-          </a>
-          <div class="flex flex-col flex-1 p-6">
-            <a rel="noopener noreferrer" href="#" aria-label="Te nulla oportere reprimique his dolorum"></a>
-            <a rel="noopener noreferrer" href="#" class="text-xs tracki uppercase hover:underline dark:text-violet-400">Convenire</a>
-            <h3 class="flex-1 py-2 text-lg font-semibold leadi">Te nulla oportere reprimique his dolorum</h3>
-            <div class="flex flex-wrap justify-between pt-3 space-x-2 text-xs dark:text-gray-400">
-              <span>June 4, 2020</span>
-              <span>2.4K views</span>
+
+            <div class=" shadow-lg ">
+              <a href="#">
+                <div class="  bg-cover bg-center text-center overflow-hidden"
+                  style="background-image: url('images/communique/1.jpg')" title="   ">
+                </div>
+                <img src="images/news/AA.jpg" class="w-full bg-coer bg-center overflow-hidden" alt="">
+              </a>
+              <div
+                class="mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
+                <div class="px-4">
+                  <a href="news/actualite.html"
+                    class="text-xs font-bold text-indigo-600 uppercase   flex items-center hover:text-gray-900 transition duration-500 ease-in-out">
+                    UNIVERSITE
+                  </a>
+                  <a href="news/actualite.html"
+                    class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 transition duration-500 ease-in-out">The
+                    perfect summer sweater that you can wear!
+
+
+                    <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
+                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloribus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus, repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
+
+                    </p>
+                  </a>
+
+                </div>
+              </div>
             </div>
+
+
+            <!-- 75640217 -->
+
           </div>
-        </article>
+
+        </div>
+
+       
+
       </div>
     </div>
-  </section>
+  </div>
 
   <!-- STAT -->
 
@@ -370,7 +446,7 @@
 
                     <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
-                      voluptatum
+                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloribus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus, repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
 
                     </p>
                   </a>
@@ -400,7 +476,7 @@
 
                     <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
-                      voluptatum
+                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloribus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus, repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
 
                     </p>
                   </a>
@@ -430,7 +506,7 @@
 
                     <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
-                      voluptatum
+                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloribus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus, repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
 
                     </p>
                   </a>
@@ -460,7 +536,7 @@
 
                     <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
-                      voluptatum
+                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloribus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus, repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
 
                     </p>
                   </a>
