--- a/html/index.html
+++ b/html/index.html
@@ -208,161 +208,143 @@
 
   <!-- ------ACTUALITES---------- -->
 
-  <div class="container mx-auto px-4 mb-10 md:px-12 xl:px-8">
-    <div class="p-2 rounded">
-
-      <div class="md:flex-row gap-10">
-
-        <div class=" bg-white  px-4  pt-8  shadow-lg">
-
-          <div class="grid lg:grid-cols-4 gap-6">
-
-
-            <div class=" shadow-lg ">
-              <a href="news/actualite.html">
-                <div class="  bg-cover bg-center text-center overflow-hidden"
-                  style="background-image: url('images/communique/1.jpg')" title="   ">
-                </div>
-                <img src="images/slide/banner-01.jpg" class="w-full bg-coer bg-center overflow-hidden" alt="">
-              </a>
-              <div
-                class="mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
-                <div class="px-4">
-                  <a href="news/actualite.html"
-                    class="text-xs font-bold text-indigo-600 uppercase   flex items-center hover:text-gray-900 transition duration-500 ease-in-out">
-                    UNIVERSITE
-                  </a>
-                  <a href="news/actualite.html"
-                    class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 transition duration-500 ease-in-out">The
-                    perfect summer sweater that you can wear!
-
-
-                    <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
-                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae dolor
-                      ibus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus,
-                      repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
-
-                    </p>
-                  </a>
-
-                </div>
+  <div class="container mx-auto px-4 mb-10 md:px-12 xl:px-10 pt-10">
+    <div class="grid grid-cols-1 md:grid-cols-4 sm:grid-cols-2 gap-10">
+        <div
+          class="border-r border-b border-l border-gray-400 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
+          <img
+            src="https://images.pexels.com/photos/1181467/pexels-photo-1181467.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500"
+            class="w-full mb-3">
+          <div class="p-4 pt-2">
+            <div class="mb-8">
+              <p class="text-sm text-gray-600 flex items-center">
+                <svg class="fill-current text-gray-500 w-3 h-3 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                  <path
+                    d="M4 8V6a6 6 0 1 1 12 0v2h1a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-8c0-1.1.9-2 2-2h1zm5 6.73V17h2v-2.27a2 2 0 1 0-2 0zM7 6v2h6V6a3 3 0 0 0-6 0z">
+                  </path>
+                </svg>
+                Members only
+              </p>
+              <a href="#" class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 inline-block">Can
+                coffee make you a better developer?</a>
+              <p class="text-gray-700 text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+            </div>
+            <div class="flex items-center">
+              <a href="#"><img class="w-10 h-10 rounded-full mr-4" src="https://tailwindcss.com/img/jonathan.jpg"
+                  alt="Avatar of Jonathan Reinink"></a>
+              <div class="text-sm">
+                <a href="#" class="text-gray-900 font-semibold leading-none hover:text-indigo-600">Jonathan
+                  Reinink</a>
+                <p class="text-gray-600">Aug 18</p>
               </div>
             </div>
-
-            <div class=" shadow-lg ">
-              <a href="#">
-                <div class="  bg-cover bg-center text-center overflow-hidden"
-                  style="background-image: url('images/communique/1.jpg')" title="   ">
-                </div>
-                <img src="images/news/AA.jpg" class="w-full bg-coer bg-center overflow-hidden" alt="">
-              </a>
-              <div
-                class="mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
-                <div class="px-4">
-                  <a href="news/actualite.html"
-                    class="text-xs font-bold text-indigo-600 uppercase   flex items-center hover:text-gray-900 transition duration-500 ease-in-out">
-                    UNIVERSITE
-                  </a>
-                  <a href="news/actualite.html"
-                    class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 transition duration-500 ease-in-out">The
-                    perfect summer sweater that you can wear!
-
-
-                    <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
-                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae dolor
-                      ibus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus,
-                      repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
-
-                    </p>
-                  </a>
-
-                </div>
-              </div>
-            </div>
-
-            <div class="  shadow-lg">
-              <a href="#">
-                <div class="  bg-cover bg-center text-center overflow-hidden"
-                  style="background-image: url('images/communique/1.jpg')" title="   ">
-                </div>
-                <img src="images/news/AA.jpg" class="w-full bg-coer bg-center overflow-hidden" alt="">
-              </a>
-              <div
-                class="mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
-                <div class="px-4">
-                  <a href="news/actualite.html"
-                    class="text-xs font-bold text-indigo-600 uppercase   flex items-center hover:text-gray-900 transition duration-500 ease-in-out">
-                    UNIVERSITE
-                  </a>
-                  <a href="news/actualite.html"
-                    class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 transition duration-500 ease-in-out">The
-                    perfect summer sweater that you can wear!
-
-
-                    <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
-                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae dolor
-                      ibus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus,
-                      repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
-
-                    </p>
-                  </a>
-
-                </div>
-              </div>
-            </div>
-
-            <div class=" shadow-lg ">
-              <a href="#">
-                <div class="  bg-cover bg-center text-center overflow-hidden"
-                  style="background-image: url('images/communique/1.jpg')" title="   ">
-                </div>
-                <img src="images/news/AA.jpg" class="w-full bg-coer bg-center overflow-hidden" alt="">
-              </a>
-              <div
-                class="mt-3 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
-                <div class="px-4">
-                  <a href="news/actualite.html"
-                    class="text-xs font-bold text-indigo-600 uppercase   flex items-center hover:text-gray-900 transition duration-500 ease-in-out">
-                    UNIVERSITE
-                  </a>
-                  <a href="news/actualite.html"
-                    class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 transition duration-500 ease-in-out">The
-                    perfect summer sweater that you can wear!
-
-
-                    <p class="text-gray-700 font-normal text-xs mt-2 text-justify mb-6">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae expedita accusamus asperiores
-                      voluptatum Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae dolor
-                      ibus nisi repellat earum. Quo a illum, ab sapiente sed iste laboriosam cupiditate necessitatibus,
-                      repellat, perspiciatis pariatur corporis? Accusantium, reprehenderit quisquam.
-
-                    </p>
-                  </a>
-
-                </div>
-              </div>
-            </div>
-
-
-            <!-- 75640217 -->
-
           </div>
-
+        </div>
+        
+        <div
+          class="border-r border-b border-l border-gray-400 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
+          <img
+            src="https://images.pexels.com/photos/1181467/pexels-photo-1181467.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500"
+            class="w-full mb-3">
+          <div class="p-4 pt-2">
+            <div class="mb-8">
+              <p class="text-sm text-gray-600 flex items-center">
+                <svg class="fill-current text-gray-500 w-3 h-3 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                  <path
+                    d="M4 8V6a6 6 0 1 1 12 0v2h1a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-8c0-1.1.9-2 2-2h1zm5 6.73V17h2v-2.27a2 2 0 1 0-2 0zM7 6v2h6V6a3 3 0 0 0-6 0z">
+                  </path>
+                </svg>
+                Members only
+              </p>
+              <a href="#" class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 inline-block">Can
+                coffee make you a better developer?</a>
+              <p class="text-gray-700 text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+            </div>
+            <div class="flex items-center">
+              <a href="#"><img class="w-10 h-10 rounded-full mr-4" src="https://tailwindcss.com/img/jonathan.jpg"
+                  alt="Avatar of Jonathan Reinink"></a>
+              <div class="text-sm">
+                <a href="#" class="text-gray-900 font-semibold leading-none hover:text-indigo-600">Jonathan
+                  Reinink</a>
+                <p class="text-gray-600">Aug 18</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <div
+          class="border-r border-b border-l border-gray-400 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
+          <img
+            src="https://images.pexels.com/photos/1181467/pexels-photo-1181467.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500"
+            class="w-full mb-3">
+          <div class="p-4 pt-2">
+            <div class="mb-8">
+              <p class="text-sm text-gray-600 flex items-center">
+                <svg class="fill-current text-gray-500 w-3 h-3 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                  <path
+                    d="M4 8V6a6 6 0 1 1 12 0v2h1a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-8c0-1.1.9-2 2-2h1zm5 6.73V17h2v-2.27a2 2 0 1 0-2 0zM7 6v2h6V6a3 3 0 0 0-6 0z">
+                  </path>
+                </svg>
+                Members only
+              </p>
+              <a href="#" class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 inline-block">Can
+                coffee make you a better developer?</a>
+              <p class="text-gray-700 text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+            </div>
+            <div class="flex items-center">
+              <a href="#"><img class="w-10 h-10 rounded-full mr-4" src="https://tailwindcss.com/img/jonathan.jpg"
+                  alt="Avatar of Jonathan Reinink"></a>
+              <div class="text-sm">
+                <a href="#" class="text-gray-900 font-semibold leading-none hover:text-indigo-600">Jonathan
+                  Reinink</a>
+                <p class="text-gray-600">Aug 18</p>
+              </div>
+            </div>
+          </div>
         </div>
 
-
-
+        <div
+        class="border-r border-b border-l border-gray-400 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r flex flex-col justify-between leading-normal">
+        <img
+          src="https://images.pexels.com/photos/1181467/pexels-photo-1181467.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500"
+          class="w-full mb-3">
+        <div class="p-4 pt-2">
+          <div class="mb-8">
+            <p class="text-sm text-gray-600 flex items-center">
+              <svg class="fill-current text-gray-500 w-3 h-3 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                <path
+                  d="M4 8V6a6 6 0 1 1 12 0v2h1a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-8c0-1.1.9-2 2-2h1zm5 6.73V17h2v-2.27a2 2 0 1 0-2 0zM7 6v2h6V6a3 3 0 0 0-6 0z">
+                </path>
+              </svg>
+              Members only
+            </p>
+            <a href="#" class="text-gray-900 font-bold text-lg mb-2 hover:text-indigo-600 inline-block">Can
+              coffee make you a better developer?</a>
+            <p class="text-gray-700 text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+          </div>
+          <div class="flex items-center">
+            <a href="#"><img class="w-10 h-10 rounded-full mr-4" src="https://tailwindcss.com/img/jonathan.jpg"
+                alt="Avatar of Jonathan Reinink"></a>
+            <div class="text-sm">
+              <a href="#" class="text-gray-900 font-semibold leading-none hover:text-indigo-600">Jonathan
+                Reinink</a>
+              <p class="text-gray-600">Aug 18</p>
+            </div>
+          </div>
+        </div>
       </div>
+
     </div>
-  </div>
+</div>
 
   <!-- STAT -->
 
   <section class=" text-gray-600 body-font">
-    <div class="container mx-auto  px-2 pt-3 mb-10 md:px-12 xl:px-10">
+    <div class="container mx-auto  px-2   mb-10 md:px-12 xl:px-10">
 
       <div class="grid grid-cols-2 lg:grid-cols-4 -m-4 text-center">
 
